# factor_system

./: .env.example  .gitignore  CLAUDE.md  CODE_WIKI.md  PLAN.md  README.md  pyproject.toml  start_fts.ps1
.github/workflows/: ci.yml
config/: settings.yaml
docs/: FTS_manual.md  production_plan.md
docs/archive/: PLAN_v2.2.md
docs/deploy/: INSTALL.md  WINDOWS.md
docs/factor_data_dict/: futures_factor_fields.md  stock_factor_fields.md
docs/harness/: 01-architecture.md  02-lifecycle.md  03-configuration.md  04-resilience.md  05-observability.md  06-testing.md  07-operations.md  08-gap-analysis.md  09-advancement-plan.md
fts/: __init__.py  cli.py  data.py  data_mcp.py  llm.py  monitor.py
fts/config/: __init__.py  settings.py
fts/core/: __init__.py  atomic.py  contracts.py  enums.py
fts/factor_engine/: __init__.py  contracts.py  cost_model.py  evaluation_chain.py  evolution_loop.py  experience_chain.py  factor_program.py  macro_evolution.py  meta_loop.py  micro_evolution.py  monitor.py  portfolio_loop.py  program.py  regime.py  seed_pool.py  state.py  stress_test.py  verifier.py  walk_forward.py
fts/monitor/: __init__.py  elite_tracker.py  http_server.py
fts/pipeline/: __init__.py  base.py  factor_combiner.py
fts/scheduler/: __init__.py  engine.py  hotswap.py  tasks.py  watchdog.py
fts/strategies/: __init__.py  base_v2.py  multi_factor_strategy.py
scripts/: download_all_contracts.py  download_contracts_lite.py  download_futures_history.py
tests/: test_cli.py  test_config_settings.py  test_data.py  test_e2e.py  test_elite_tracker.py  test_http_server.py  test_llm.py  test_monitor.py
tests/core/: test_atomic.py  test_contracts.py  test_enums.py
tests/factor_engine/: conftest.py  test_contracts.py  test_cost_model.py  (+15 more)
(+9 files in other folders)
